# fake-news-detective

./: Pasted--Fake-News-Detective-Analysis-Tool-History-How-It-Works-How-it-works-Enter-an-art-1730305945961.txt  Pasted--Fake-News-Detective-Analysis-Tool-History-How-it-works-Enter-an-article-URL-or-paste--1730578455623.txt  Pasted--Fake-News-Detective-How-it-works-Paste-your-article-text-below-Our-AI-will-analyze-the-content-1730262512583.txt  Pasted--IntegrityError-psycopg2-errors-UniqueViolation-duplicate-key-value-violates-unique-constraint--1730305009135.txt  README.md  download_nltk_data.py  init.py  init_app.py  main.py  prepare_github.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  start_server.py  train_model.py
models/: fake_news_model.pkl
utils/: analyzer.py  database.py  preprocessor.py  source_checker.py
