[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "nltk>=3.9.1",
    "numpy>=2.1.2",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "python-whois>=0.9.4",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
    "tenacity>=9.0.0",
    "trafilatura>=1.12.2",
    "whois",
]
